# nodas

./: .editorconfig  .gitignore  Cargo.toml
engine/: Cargo.toml  build.rs
engine/res/: 14037_Pizza_Box_v2_L1.mtl  depth_frame.frag  depth_frame.vert  grid.frag  grid.vert  light.frag  light.vert  shader.frag  shader.vert
engine/src/: binding.rs  camera.rs  frame.rs  main.rs  model.rs  render.rs  renderpass.rs  shader.frag  shader.vert  state.rs  texture.rs  traits.rs  transform.rs  world.rs
engine/src/camera/: flycam.rs  mod.rs  projection.rs
engine/src/inspect/: inspect_transform.rs  mod.rs
engine/src/render/: binding.rs  frame.rs  grid.rs  mod.rs  model.rs  render.rs  renderpass.rs  state.rs  texture.rs  traits.rs
engine/src/render/model/: geometry.rs  material.rs  mod.rs  vertex.rs
noder/: Cargo.toml
noder/src/: codegen.rs  lib.rs
noder/src/node/: mod.rs
