[package]
name = "wgpu"
version = "0.1.0"
authors = ["chronium <chronium@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.23"
cgmath = "0.17"
env_logger = "0.8.2"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
bytemuck = "1.4"
anyhow = "1.0"
imgui = "0.6"
imgui-wgpu = "0.12"
imgui-winit-support = "0.6"
tobj = "2.0.3"
wgpu-mipmap = "0.1.0"

noder = { path = "../noder" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2.0"
glob = "0.3"
shaderc = "0.7"
